Updated SedmlTaskRecord to be an actual record